cabal-version:      2.4
name:               advent2021
version:            0.1.0.0

-- A short (one-line) description of the package.
synopsis: Solutions to Advent of Code 2021

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
license:            MIT
author:             Tarmo Kivioja
maintainer:         tarmo.kivioja@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
    CHANGELOG.md
    README.md

executable advent2021
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:    Input,
                      Day01, Day02, Day03, Day04, Day05,
                      Day06, Day07, Day08, Day09, Day10,
                      Day11, Day12, Day13, Day14, Day15

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
                , base              ^>= 4.14.3.0
                , bytestring        ^>= 0.11.2.0
                , containers        ^>= 0.6.5.1
                , megaparsec        ^>= 9.2.0
                , mtl               ^>= 2.2.2
                , parsec            ^>= 3.1.15.0
                , PSQueue           ^>= 1.1.0.1
                , text              ^>= 1.2.5.0
                , vector            ^>= 0.12.3.1
                , vector-algorithms ^>= 0.8.0.4
    hs-source-dirs:   app, lib
    default-language: Haskell2010
